--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="logo192.png" />
+  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
+  <meta http-equiv="Content-Language" content="zh-CN" />
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta name="format-detection" content="telephone=no">
+  <link rel="apple-touch-icon" href="images/icons/icon-192x192.png" />
+  <meta name="description" content="Share your documents.">
+  <meta name="description" content="...and let your friends comment it.">
+  <meta name="description" content="Github: https://github.com/Yangjiaxi">
+  <link rel="preconnect" href="https://api-doc.jojo.fit">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
 </head>
 
