--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="apple-touch-icon" href="images/icons/icon-192x192.png" />
-  <meta name="description" content="Share your documents.">
+  <meta name="description" content="Share your document">
   <meta name="description" content="...and let your friends comment it.">
   <meta name="description" content="Github: https://github.com/Yangjiaxi">
   <link rel="preconnect" href="https://api-doc.jojo.fit">
